# updated_serial_driver-11

./: .gitignore  CMakeLists.txt  README.md  sonar.properties
ghs_data/: dummy.ld
include/: hw_abstraction.h  hw_test_helpers.h  ring_buffer.h  xr17v358.h  xr17v358_internal.h  xr17v358_register_map.h
src/: ghs_interface.c  hw_abstraction.c  hw_test_helpers.c  ring_buffer.c  xr17v358.c
tests/: helpers.h  xr17v358_tests.cpp
